# backend/app/Models/User.php
@@ -2,21 +2,19 @@
 
 namespace App\Models;
 
-// use Illuminate\Contracts\Auth\MustVerifyEmail;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
-use PHPOpenSourceSaver\JWTAuth\Contracts\JWTSubject; // [!code focus]
+use PHPOpenSourceSaver\JWTAuth\Contracts\JWTSubject;
 
-class User extends Authenticatable implements JWTSubject // [!code hl]
+class User extends Authenticatable implements JWTSubject
 {
-    /** @use HasFactory<\Database\Factories\UserFactory> */
     use HasFactory, Notifiable;
 
     /**
      * The attributes that are mass assignable.
      *
-     * @var list<string>
+     * @var array<int, string>
      */
     protected $fillable = [
         'name',
@@ -27,7 +25,7 @@ class User extends Authenticatable implements JWTSubject // [!code hl]
     /**
      * The attributes that should be hidden for serialization.
      *
-     * @var list<string>
+     * @var array<int, string>
      */
     protected $hidden = [
         'password',
@@ -48,7 +46,7 @@ class User extends Authenticatable implements JWTSubject // [!code hl]
     }
 
     /**
-     * Get the identifier that will be stored in the JWT token.
+     * Get the identifier that will be stored in the subject claim of the JWT.
      */
     public function getJWTIdentifier()
     {
@@ -61,5 +59,15 @@ class User extends Authenticatable implements JWTSubject // [!code hl]
     public function getJWTCustomClaims()
     {
         return [];
+    }
+
+    /**
+     * The teams that belong to the user.
+     */
+    public function teams()
+    {
+        return $this->belongsToMany(Team::class)
+                    ->withPivot('role')
+                    ->withTimestamps();
     }
 }
